<resources>
    <string name="app_name">201811020.hw1.seng405</string>
    <string name="Username">username</string>
    <string name="e_mail">E-mail</string>
    <string name="login">LOGIN</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_password">Forget Password</string>
    <string name="todo">TODO</string>
    <string name="l">E-Mail</string>
    <string name="email">email</string>
    <string name="register">Register</string>
    <string name="emaill">E-Mail</string>
    <string name="password">Password</string>
    <string name="emailll">E-Mail</string>
    <string name="welcome">Welcome</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_password1">Forget Password ?</string>
    <string name="sign_up1">Sign Up</string>
</resources>